--- a/tic_tac_toe.html
+++ b/tic_tac_toe.html
@@ -22,6 +22,8 @@
 				<div id="row_3_col_2" class="game-square"></div>
 				<div id="row_3_col_3" class="game-square"></div>
 			</div>
+			<div id="victory"></div>
+			<div class="row"><a href="#" id="new-game">new game</a></div>
 		</div>
 	</div>
 
